Fixed header gap

--- a/Public/Assets/Client/sass/Components/_header.scss
+++ b/Public/Assets/Client/sass/Components/_header.scss
@@ -56,5 +56,5 @@ header {
 }
 
 .header-space {
-    height: 6rem;
+    height: 5.5rem;
 }
